--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body {
     width: calc(100% - 100px);
     margin: 0 50px;
     display: block;
-    border: 2px solid #00acee; 
+    /* border: 2px solid #00acee;  */
     font: italic bold 26px/1 "Ubuntu", sans-serif;
     text-align: center;
     border: none;
@@ -43,6 +43,7 @@ body {
 .button_contact_us_ontainer:hover {
     width: calc(90% - 100px);
     transition: all 0.3s ease;
+    box-sizing: border-box;
 }
 
 .button_contact_us {
@@ -52,7 +53,7 @@ body {
     width: calc(100% - 100px);
     margin: 0 50px;
     display: block;
-    border: 2px solid #00acee; 
+    border: 2px solid #00acee;
     font: italic bold 26px/1 "Ubuntu", sans-serif;
     text-align: center;
     border: none;
@@ -94,7 +95,7 @@ body {
 .introduction_section_text {
     font-weight: 100;
     margin: 25px;
-    font-size: 24px;
+    font-size: 20px;
     text-align: justify;
     box-sizing: border-box;
 }
@@ -120,11 +121,78 @@ body {
     font-weight: 100;
     margin: 35px;
     margin-right: 65px;
-    font-size: 24px;
+    font-size: 20px;
     text-align: justify;
     box-sizing: border-box;
     padding: 0 15px;
 }
+
+.success_section {
+    font-size: 24px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    color: white;
+    background-color: rgb(164, 90, 0);
+    width: 100%;
+    margin: 20px 0;
+}
+
+.success_section_text_container {
+    margin: 15px;
+    max-width: calc(100% - 80px);
+    padding: 15px;
+}
+
+.success_section_title {
+    text-align: left;
+    margin: 0 25px 0 25px;
+}
+
+.success_section_text {
+    font-weight: 100;
+    margin: 25px;
+    font-size: 20px;
+    text-align: justify;
+    box-sizing: border-box;
+}
+
+.opinions_section {
+    margin: 20px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 35px;
+    grid-row-gap: 35px;
+}
+
+.opinion {
+    border: 1px solid #000000;
+    -webkit-box-shadow: 0px 0px 25px -17px rgba(0, 0, 0, 1);
+    -moz-box-shadow: 0px 0px 25px -17px rgba(0, 0, 0, 1);
+    box-shadow: 0px 0px 25px -17px rgba(0, 0, 0, 1);
+    transition: transform 0.3s ease;
+}
+
+.opinion:hover {
+    transform: scale(1.05); 
+    cursor: auto;
+}
+
+.personal_data {
+    font-weight: 900;
+    margin-left: 20px;
+}
+
+.text_opinion {
+    margin: 20px;
+    font-style: italic;
+    font-size: 15px;
+}
+
+
+
 
 #dynamicWord {
     display: inline-block;
