--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
-    font-family: "Trebuchet MS", Helvetica, sans-serif;
+    /* font-family: "Trebuchet MS", Helvetica, sans-serif; */
+    font-family: 'Poppins', sans-serif;
     margin: 0;
     background-color: #EAEAEA;
 }
@@ -26,7 +27,7 @@ body {
     opacity: 0;
 }
 
-.button_contact_us_ontainer {
+.button_contact_us_container {
     background: rgb(0, 0, 0);
     border-radius: 1000px;
     width: calc(100% - 100px);
@@ -40,8 +41,9 @@ body {
     box-sizing: border-box;
 }
 
-.button_contact_us_ontainer:hover {
+.button_contact_us_container:hover {
     width: calc(90% - 100px);
+    margin: 0 calc(5% + 50px);
     transition: all 0.3s ease;
     box-sizing: border-box;
 }
@@ -69,7 +71,7 @@ body {
     color: #EAEAEA;
 }
 
-#content .introduction_section {
+.introduction_section {
     font-size: 24px;
     display: flex;
     flex-direction: row;
@@ -78,7 +80,7 @@ body {
     color: white;
     background-color: rgb(0, 22, 164);
     width: 100%;
-    margin: 20px 0;
+    margin: 20px 0 0 0;
 }
 
 .introduction_section_text_container {
@@ -100,24 +102,29 @@ body {
     box-sizing: border-box;
 }
 
-
 .features_section {
+    background-image: url('/images/homePagePhoto.png'); 
+    background-size: cover; 
+    background-repeat: no-repeat; 
+    background-position: center; 
     font-size: 24px;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
     width: 100%;
-    margin: 20px 0;
+    padding: 20px 0;
 }
 
 .features_section_title {
+    color: white;
     text-align: left;
     margin: 0 0 0 35px;
     padding: 0 15px;
 }
 
 .features_section_text {
+    color: white;
     font-weight: 100;
     margin: 35px;
     margin-right: 65px;
@@ -136,7 +143,7 @@ body {
     color: white;
     background-color: rgb(164, 90, 0);
     width: 100%;
-    margin: 20px 0;
+    margin: 0 0 20px 0;
 }
 
 .success_section_text_container {
@@ -156,6 +163,10 @@ body {
     font-size: 20px;
     text-align: justify;
     box-sizing: border-box;
+}
+
+.opinions_section_title {
+    margin-left: 20px;
 }
 
 .opinions_section {
@@ -191,9 +202,6 @@ body {
     font-size: 15px;
 }
 
-
-
-
 #dynamicWord {
     display: inline-block;
     transition: transform 0.5s, opacity 0.5s;
@@ -206,8 +214,8 @@ body {
     /* padding: 10px; */
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    /* justify-content: center;
+    align-items: center; */
     /* margin: 10px; */
 }
 
