--- a/css/contact.css
+++ b/css/contact.css
@@ -1,10 +1,7 @@
 .contact_page {
      display: flex;
      flex-direction: column;
-     /* margin-left: 20px; */
      flex-wrap: wrap;
-     justify-content: left;
-     align-items: left;
 }
 
 .contact_title {
@@ -12,6 +9,7 @@
      display: flex;
      justify-content: center;
      align-items: center;
+     margin: 20px 0 0 0 ;
 }
 
 .contact_map_open_hours {
@@ -19,7 +17,7 @@
      flex-direction: row;
      flex-wrap: wrap;
      justify-content: space-evenly;
-     align-items: left;
+     align-items: center;
 }
 
 .map {
@@ -30,7 +28,6 @@
      margin-bottom: 10px;
      border-radius: 10px;
      border: 3px solid black;
-     /* box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.75); */
 }
 
 .find_us {
@@ -40,7 +37,7 @@
      align-items: center;
      text-shadow: 0px -40px 1px rgb(0, 22, 164), 0px 40px 1px rgb(164, 90, 0),  0px -80px 2px rgb(0, 22, 164), 0px 80px 2px rgb(164, 90, 0),
      0px -120px 3px rgb(0, 22, 164), 0px 120px 3px rgb(164, 90, 0);
-     font-size: 20px;
+     font-size: 25px;
      font-weight: 900;
      
 }
@@ -58,21 +55,46 @@ th, td {
      padding: 4px;
 }
 
+.contact_us_contact_form {
+     display: flex;
+     justify-content: center;
+     align-items: left;
+     display: flex;
+     flex-direction: column;
+     flex-wrap: wrap;
+     justify-content: center;
+     align-items: center;
+}
 
-#contact-form {
+.full_width_line {
+     width: 50%;
+     height: 2px; 
+     background-color: black;
+     margin: 20px; 
+     align-self: center;
+}
+
+.contact_us {
+     display: flex;
+     justify-content: center;
+     font-size: 25px;
+     font-weight: 900;
+}
+
+.contact_form {
      display: flex;
      flex-direction: column;
      flex-wrap: wrap;
      justify-content: left;
      align-items: left;
-     width: 400px;
-     max-width: 500px;
-     margin: 0 auto;
+     width: 500px;
+     max-width: 900px;
      padding: 20px;
      background-color: #f7f7f7;
      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
  }
- .contact_form label {
+
+.contact_form label {
      font-size: 15px;
      font-weight: 700;
      margin: 5px;
@@ -99,10 +121,13 @@ th, td {
 .button_container {
      display: flex;
      justify-content: center;
-     align-items: center;
+     align-self: center;
+     width: 100px;
+     border: 1px solid black;
+     border-radius: 4px;
 }
 
- .contact_form button[type="submit"] {
+.contact_form button[type="submit"] {
      width: 100px;
      padding: 10px;
      background-color: white;
