--- a/css/styleHeader.css
+++ b/css/styleHeader.css
@@ -1,5 +1,12 @@
+* {
+     padding: 0;
+     margin: 0;
+     box-sizing: border-box;
+}
+
 header {
      width: 100%;
+     /* min-width: 400px; */
      height: 100px;
 }
 
@@ -15,15 +22,13 @@ a {
      margin: 5px;
 }
 
-.header_inner {
+.nav_bar {
      font-size: large;
      display: flex;
      flex-direction: row;
-     flex-wrap: wrap;
+     /* flex-wrap: wrap; */
      justify-content: space-between;
      align-items: center;
-     align-content: center;
-     text-align: center;
      padding-right: 15px;
      padding-left: 5px;
      margin: 0 auto;
@@ -31,22 +36,44 @@ a {
      width: 100%
 }
 
-.header_menu {
+.nav_menu {
      display: flex;
      align-items: center;
      flex-direction: row;
-     justify-content: center;
+     justify-content: space-between;
 
 }
 
-.header_menu_links {
-
+.nav_item {
      display: flex;
      flex-direction: row;
      flex-grow: 1;
      margin: 0;
      padding: 0 30px;
-     /* width: 100%;   */
+     width: 100%;  
+}
+
+
+
+.nav_link:hover {
+     color: rgb(0, 22, 164);
+}
+
+.menu_toggle {
+     display: none;
+     cursor: pointer;
+     color: black;
+}
+
+.bar {
+     display: block;
+     width: 25px;
+     height: 3px;
+     margin: 5px auto;
+     -webkit-transition: all 0.3s ease-in-out;
+     transition: all 0.3s ease-in-out;
+     background-color: black;
+     color: black;
 }
 
 .logo {
@@ -69,9 +96,44 @@ a {
      height: 24px;
 }
 
+@media screen and (max-width: 912px) {
+     .menu_toggle {
+          display: block;
+         
+     }
 
+     .menu_toggle.active .bar:nth-child(2) {
+          opacity: 0;
+     }
+     .menu_toggle.active .bar:nth-child(1) {
+          transform: translateY(8px) rotate(45deg);
+     }
+     .menu_toggle.active .bar:nth-child(3) {
+          transform: translateY(-8px) rotate(-45deg);
+     }
 
-
-
-
-   
+     .nav_item {
+          /* background-color: rgb(115, 114, 114); */
+          background-color: rgba(71, 71, 71, 0.94); 
+          position: fixed;
+          left:-100%;
+          top: 100px;
+          gap: 0;
+          flex-direction: column;
+          width: 100%;
+          height: 300px;
+          text-align: center;
+          transition: 0.3s;
+          z-index: 1000;
+     }
+     .nav_link {
+          font-size: 40px;
+          margin: 20px 0;
+          color: white;
+     }
+     .nav_item.active  {
+          display: flex;
+          justify-content: center;
+          left: 0;
+     }
+}
