--- a/css/contact.css
+++ b/css/contact.css
@@ -35,8 +35,9 @@
      flex-direction: column;
      justify-content: center;
      align-items: center;
-     text-shadow: 0px -40px 1px rgb(0, 22, 164), 0px 40px 1px rgb(164, 90, 0),  0px -80px 2px rgb(0, 22, 164), 0px 80px 2px rgb(164, 90, 0),
-     0px -120px 3px rgb(0, 22, 164), 0px 120px 3px rgb(164, 90, 0);
+     text-shadow: 0px -40px 1px #3a7ec7, 0px 40px 1px #b0c9e5,  
+     0px -80px 2px #3a7ec7, 0px 80px 2px #b0c9e5,
+     0px -120px 3px #3a7ec7, 0px 120px 3px #b0c9e5;
      font-size: 25px;
      font-weight: 900;
      margin: 10px 20px;
