--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,8 @@ body {
     flex-wrap: wrap;
     align-items: center;
     color: white;
-    background-color: rgb(0, 22, 164);
+    background-color: #4fabf6;
+    /* background-color: rgb(0, 22, 164); */
     width: 100%;
     margin: 20px 0 0 0;
 }
@@ -140,7 +141,8 @@ body {
     flex-wrap: wrap;
     align-items: center;
     color: white;
-    background-color: rgb(164, 90, 0);
+    background-color: #010e1d;
+    /* background-color: rgb(164, 90, 0); */
     width: 100%;
     margin: 0 0 20px 0;
 }
@@ -171,7 +173,8 @@ body {
 .opinions_section {
     margin: 20px;
     display: grid;
-
+background-color:#badefe ;
+border: 2px solid #000000;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
     grid-column-gap: 35px;
@@ -179,6 +182,7 @@ body {
 }
 
 .opinion {
+    background-color: white ;
     border: 1px solid #000000;
     -webkit-box-shadow: 0px 0px 25px -17px rgba(0, 0, 0, 1);
     -moz-box-shadow: 0px 0px 25px -17px rgba(0, 0, 0, 1);
