--- a/css/style.css
+++ b/css/style.css
@@ -246,6 +246,14 @@ border: 2px solid #000000;
     color: black;
 }
 
+#clock {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
 
 
 @media screen and (max-width: 680px){
