--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,6 @@ body {
     box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
 }
 
-
-
 .rotating {
     transform: rotateX(90deg);
     opacity: 0;
@@ -78,7 +76,6 @@ body {
     align-items: center;
     color: white;
     background-color: #4fabf6;
-    /* background-color: rgb(0, 22, 164); */
     width: 100%;
     margin: 20px 0 0 0;
 }
@@ -103,10 +100,10 @@ body {
 }
 
 .features_section {
-    background-image: url('/images/homePagePhoto.png'); 
-    background-size: cover; 
-    background-repeat: no-repeat; 
-    background-position: center; 
+    background-image: url('/images/homePagePhoto.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     font-size: 24px;
     display: flex;
     flex-direction: row;
@@ -142,7 +139,6 @@ body {
     align-items: center;
     color: white;
     background-color: #010e1d;
-    /* background-color: rgb(164, 90, 0); */
     width: 100%;
     margin: 0 0 20px 0;
 }
@@ -173,8 +169,8 @@ body {
 .opinions_section {
     margin: 20px;
     display: grid;
-background-color:#badefe ;
-border: 2px solid #000000;
+    background-color: #badefe;
+    border: 2px solid #000000;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
     grid-column-gap: 35px;
@@ -182,7 +178,7 @@ border: 2px solid #000000;
 }
 
 .opinion {
-    background-color: white ;
+    background-color: white;
     border: 1px solid #000000;
     -webkit-box-shadow: 0px 0px 25px -17px rgba(0, 0, 0, 1);
     -moz-box-shadow: 0px 0px 25px -17px rgba(0, 0, 0, 1);
@@ -191,7 +187,7 @@ border: 2px solid #000000;
 }
 
 .opinion:hover {
-    transform: scale(1.05); 
+    transform: scale(1.05);
     cursor: auto;
 }
 
@@ -254,13 +250,18 @@ border: 2px solid #000000;
     align-items: center;
 }
 
+@media screen and (max-width: 680px) {
+    .introduction_section_text,
+    .features_section_text,
+    .success_section_text {
+        text-align: left;
+    }
 
-
-@media screen and (max-width: 680px){
     .future_text {
         width: 450px;
-        text-align: center; 
+        text-align: center;
     }
+
     .main_section {
         display: flex;
         justify-content: center;
@@ -276,7 +277,7 @@ border: 2px solid #000000;
         margin-left: 10px;
     }
 
-    .opinions_section{
-        grid-template-columns:1fr;
+    .opinions_section {
+        grid-template-columns: 1fr;
     }
 }
