--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ body {
     width: calc(100% - 60px);
     margin: 30px;
     font-size: 50px;
+    font-weight: 700;
     color: #050505;
     -webkit-box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
     -moz-box-shadow: 8px 8px 24px 0px rgba(66, 68, 90, 1);
