--- a/css/technologies.css
+++ b/css/technologies.css
@@ -3,7 +3,7 @@
      flex-direction: column;
 }
 
-.technologies_and_stats {
+.technologies_and_list {
      display: flex;
      flex-direction: column;
      margin: 0 20px;
@@ -14,41 +14,47 @@
      flex-direction: row;
      justify-content: space-evenly;
      align-items: center;
+     margin-top: 30px;
+     margin-left: 10px;
 }
 
 .technologies_photo_container {
      display: flex;
-     margin: 45px;
+     margin: 25px 30px;
+     padding: 20px;
      flex-direction: column;
      justify-content: space-evenly;
      align-items: center;
-     height: 400px;
-     width: 700px;
+     height: 330px;
+     width: 650px;
      position: relative;
 }
 
 .technologies_photo {
-     display: block; 
-     width: 100%; 
-     height: auto; 
-     filter: blur(19px); 
-     box-shadow: black 0px -20px 40px 00px, black 0px 20px 40px 00px;
- }
+     min-width: 450px;
+     display: block;
+     width: 100%;
+     height: auto;
+     filter: blur(10px);
+}
 
- .technologies_photo2 {
-     position: absolute; 
-     max-width: 80%; 
-     max-height: 80%;
+.technologies_photo2 {
+     position: absolute;
+     max-width: 95%;
+     max-height: 95%;
      z-index: 10;
- }
+}
 
 .technologies {
-     max-width: 750px;
+     padding: 10px;
+     margin: 15px;
+     /* max-width: 750px; */
      display: flex;
      flex-direction: column;
      justify-content: space-evenly;
      align-items: center;
-     width: 100%;
+     max-width: 650px;
+     /* width: 100%; */
 }
 
 .technologies_title {
@@ -61,16 +67,184 @@
      margin-left: 15px;
 }
 
+.technologies_list_container {
+     margin: 35px 25px 20px 25px;
+     display: flex;
+     flex-direction: row;
+     flex-wrap: wrap;
+     justify-content: space-evenly;
+     align-items: center;
+}
+
+.technology_list {
+     margin: 15px 15px;
+}
+
+.technology_list li {
+     cursor: pointer;
+     margin-bottom: 5px;
+     border: 3px solid #010F5A;
+     border-radius: 100px 20px 100px 20px;
+     padding: 15px;
+     background-color: white;
+}
+
+.technology_list li:hover {
+     background-color: #b8c2fa;
+}
+
+.technology_list li.active {
+     background-color:  #0d1f87;
+     color: white;
+     /* background-color:  #09A4EB; */
+}
+
+.technology_details {
+     border: 5px solid #010F5A;
+     width: 500px;
+     min-height: 400px;
+     padding: 50px 35px;
+     border-radius: 100px 20px 100px 20px;
+     margin: 10px 15px;
+     background-color: #0d1f87;
+     color: white
+}
+
+.benefits_container {
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     /* margin: 15px 25px 20px 25px; */
+     max-width: 1500px;
+
+}
+
+.benefits_cards_container {
+     display: flex;
+     flex-direction: row;
+     justify-content: space-evenly;
+     align-items: center;
+     flex-wrap: wrap;
+     width: 100%;
+     /* margin: 15px 25px 20px 25px; */
+}
+
+.benefit_card {
+     /* flex-basis: 45%;  */
+     /* box-shadow: 0 4px 8px rgba(0,0,0,0.1);  */
+     margin: 10px 50px; 
+     padding: 20px; 
+     text-align: left; 
+     max-width: 450px;
+ }
+ 
+ .benefit_card_number {
+     display: flex;
+     justify-content: center;
+     border-radius: 10px;
+     align-items: center;
+     background-color: #b8c2fa;
+     /* background-color: #586bd4; */
+     width: 40px;
+     height: 40px;
+ }
+ 
+ .number_card {
+     position: relative;
+     font-size: 24px; 
+     font-weight: bold; 
+     line-height: 1;
+ }
+ 
+ .benefit_card_title {
+     font-size: 18px; 
+     margin-top: 20px; 
+     font-weight: bold;
+ }
+ 
+ .benefit_card_text {
+     font-size: 14px; 
+     margin-top: 10px;
+ }
 
 
 
 
-@media screen and (max-width: 912px) {
+
+
+@media screen and (max-width: 980px) {
+     .technologies_page {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+          justify-items: center;
+     }
+
+     .technologies_container {
+          flex-direction: column;
+     }
+
+     .technologies_photo {
+          filter: blur(50px);
+     }
+
+     .technology_details, .technology_list {
+          margin: 10px 0;
+      }
+
+     .technologies_photo2 {
+          max-width: 93%;
+          max-height: 93%;
+     }
+
      .technologies_container {
           flex-wrap: wrap;
+          margin: 45px 40px 20px 40px;
      }
 
-     .stats_container {
-          flex-wrap: wrap;
+     .technologies_list_container {
+          margin: 10px 0 20px 0;
+     }
+
+     .technologies {
+          margin: 20px;
+     }
+
+     .technology_list li {
+          padding: 15px 20px;
      }
 }
+
+@media screen and (max-width: 768px) {
+     .technologies_and_list, .technologies_container {
+         flex-direction: column;
+     }
+ 
+     .technology_details, .technology_list {
+         margin: 10px 0;
+     }
+ 
+     .technologies_photo_container {
+         width: auto; 
+         height: auto; 
+     }
+ 
+     .technologies_photo {
+         min-width: auto; 
+     }
+ 
+     .technologies_title {
+         font-size: 30px;
+     }
+ 
+     .technologies_text, .technology_details {
+         margin-left: 10px;
+         margin-right: 10px;
+     }
+
+     .technology_details {
+          width: auto;
+          max-width: 500px;
+     }
+ }
