--- a/css/styleHeader.css
+++ b/css/styleHeader.css
@@ -7,6 +7,13 @@
 header {
      width: 100%;
      height: 100px;
+     position: fixed;
+     top: 0;
+     left: 0;
+     background-color: #EAEAEA; 
+     z-index: 10;
+     transition: height 0.3s ease;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
 }
 
 li {
@@ -125,11 +132,11 @@ a {
           background-color: rgba(71, 71, 71, 0.94); 
           position: fixed;
           left:-100%;
-          top: 100px;
+          top: 90px;
           gap: 0;
           flex-direction: column;
           width: 100%;
-          height: 300px;
+          height: calc(100vh - 90px); 
           text-align: center;
           transition: 0.3s;
           z-index: 1000;
