--- a/css/technologies.css
+++ b/css/technologies.css
@@ -116,16 +116,23 @@
 
 }
 
+.benefits_title {
+     display: flex;
+     flex-direction: column;
+     align-self: center;
+}
+
 .benefits_cards_container {
      display: flex;
      flex-direction: row;
      justify-content: space-evenly;
-     align-items: center;
+     align-items: first baseline;
      flex-wrap: wrap;
      width: 100%;
 }
 
 .benefit_card {
+     
      margin: 10px 50px;
      padding: 20px;
      text-align: left;
@@ -196,7 +203,7 @@
      }
 
      .technologies {
-          margin: 20px;
+          margin: 10px;
      }
 
      .technology_list li {
