--- a/css/style.css
+++ b/css/style.css
@@ -231,6 +231,7 @@ body {
     height: 50px;
     border-radius: 50%;
     font-size: 25px;
+    z-index: 10;
     border: none;
     background-color: black;
     color: white;
